--- a/EvolveExample/EvolveExample/EvolveExample.csproj
+++ b/EvolveExample/EvolveExample/EvolveExample.csproj
@@ -49,9 +49,11 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NavFragment.cs" />
-    <Compile Include="GridFragment.cs" />
-    <Compile Include="ImageFragment.cs" />
+    <Compile Include="Fragments\GridFragment.cs" />
+    <Compile Include="Fragments\ImageFragment.cs" />
+    <Compile Include="Fragments\NavFragment.cs" />
+    <Compile Include="Services\MasterService.cs" />
+    <Compile Include="Services\DevicePingPluginService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -80,5 +82,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Resources\values-large-land\" />
+    <Folder Include="Fragments\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
